tests/machine/x/python/group_by_join.error
run: exit status 1
--- Orders per customer ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/group_by_join.py", line 185, in <module>
    print(s["name"], "orders:", s["count"])
          ~^^^^^^^^
TypeError: 'Auto2' object is not subscriptable

